# python-project-lvl1

./: README.md  pyproject.toml  setup.cfg
brain_games/: cli.py
brain_games/games/: calc.py  gcd.py  prime.py  progression.py
brain_games/scripts/: BRAIN_EVEN.py  brain_games.py
