[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Pavel Kaganer <pashakag@gmail.com>"]
packages = [ { include = "brain_games" }, ]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[tool.poetry.dev-dependencies]
ipython = "^7.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
