[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Pavel Kaganer <pashakag@gmail.com>"]
packages = [ { include = "brain_games" }, ]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.BRAIN_GAMES:main"
brain-even = "brain_games.scripts.BRAIN_EVEN:main"
brain-calc = "brain_games.scripts.BRAIN_CALC:main"
brain-gcd = "brain_games.scripts.BRAIN_GCD:main"

[tool.poetry.dev-dependencies]
ipython = "^7.28.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
